--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: ruby
 rvm:
-  - 1.9.3
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
-  - rbx-2.1.1
   - 1.8.7
-script: rspec test_mapgen
+  - 1.9.3
+  - 2.0.0
+script: ruby test_mapgen
