--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: ruby
 rvm:
+  # MRI
   - 1.8.7
   - 1.9.3
   - 2.0.0
-script: ruby test_mapgen.rb
+  - 2.1.5
+  - 2.2.0
+  # JRuby
+  - jruby-18mode
+  - jruby-19mode
+script:
+  - ruby test_mapgen.rb
