Add other Rubies to Travis matrix and allow failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,13 @@ rvm:
   - 2.4.0
   - 2.5.0
   - 2.6.0
-  # JRuby
+  # Others
   - jruby
+  - rbx-3
+  - truffleruby
+matrix:
+  allow_failures:
+  - rvm: jruby
+  - rvm: rbx-3
+  - rvm: truffleruby
 script: ruby test_mapgen.rb
