--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,10 @@ rvm:
   - 2.5.0
   - 2.6.0
   # Others
-  - jruby
-  - rbx-3
+  - jruby-9.1.17.0
   - truffleruby
 matrix:
   allow_failures:
-  - rvm: jruby
-  - rvm: rbx-3
+  - rvm: jruby-9.1.17.0
   - rvm: truffleruby
 script: ruby test_mapgen.rb
