--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ rvm:
   - 2.5.0
   - 2.6.0
   # Others
-  - jruby-9.2.7.0
+  - jruby
   - truffleruby
 matrix:
   allow_failures:
-  - rvm: jruby-9.2.7.0
+  - rvm: jruby
   - rvm: truffleruby
 script: ruby test_mapgen.rb
